2012-08-10  Peter Bloomfield

	* libbalsa/body.c (libbalsa_message_body_get_part_stream):
	simplify filter selection switch.

2012-08-09  Peter Bloomfield

	* src/balsa-mime-widget-message.c (bm_header_widget_realized):
	use BalsaMessage::scroll as the context for header widget
	colors.

2012-07-22  Peter Bloomfield

	* src/store-address.c (store_address_book_frame): reduce scope
	of variables.

2012-07-22  Peter Bloomfield

	* src/sendmsg-window.c (update_bsmsg_identity): reduce scope of
	variables;
	(tree_add_quote_body): suppress null pointer warning.

2012-07-22  Peter Bloomfield

	* src/save-restore.c (pop3_progress_notify): suppress memory
	leak warning.

2012-07-22  Peter Bloomfield

	* src/main-window.c: use sscanf field limits; suppress null
	pointer warning.

2012-07-22  Peter Bloomfield

	* src/mailbox-conf.c (mailbox_conf_update): reduce scope of
	variable.

2012-07-22  Peter Bloomfield

	* src/balsa-mime-widget.c (balsa_mime_widget_new_unknown):
	reduce scope of variables.

2012-07-22  Peter Bloomfield

	* src/balsa-index.c (pipe_out_watch): reduce scope of variable.

2012-07-22  Peter Bloomfield

	* libinit_balsa/assistant_page_directory.c
	(unconditional_mailbox): reduce scope of variable.

2012-07-22  Peter Bloomfield

	* libbalsa/send.c (balsa_send_message_real): suppress memory
	leak warning.

2012-07-22  Peter Bloomfield

	* libbalsa/message.c (prepend_header_misc): check loop index
	value before using it.

2012-07-22  Peter Bloomfield

	* libbalsa/mailbox_pop3.c (mp_load_uids): reduce scope of
	variable.

2012-07-22  Peter Bloomfield

	* libbalsa/mailbox_mh.c (lbm_mh_parse_mailbox),
	(lbm_mh_handle_seq_line), (lbm_mh_check): use sscanf field
	limits.

2012-07-22  Peter Bloomfield

	* libbalsa/mailbox_mbox.c (lbm_mbox_stream_seek_to_message):
	avoid unread variable error.

2012-07-22  Peter Bloomfield

	* libbalsa/mailbox_imap.c (is_child_of), (create_cache_copy),
	(libbalsa_mailbox_imap_sort): reduce scope of variables.
